plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'darkoverload'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // Spring Boot Starter Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // PostgreSQL
    implementation group: 'org.postgresql', name:'postgresql', version: '42.2.19'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // H2
    runtimeOnly 'com.h2database:h2'

    // redis 설정 주입
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // SpringBoot 3.x later for QueryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // AWS for Bucket
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    testImplementation 'io.findify:s3mock_2.12:0.2.4'

    // File Upload
    implementation 'commons-io:commons-io:2.14.0'
    implementation 'commons-fileupload:commons-fileupload:1.5'

    // Apache Tika Core
    implementation 'org.apache.tika:tika-core:1.28.4'

    // Lombok for Test Code
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // JUnit5
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'

    // Mockito
    testImplementation 'org.mockito:mockito-core:4.0.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'

    // JWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    // Json
    implementation 'com.google.code.gson:gson'

    // Validation
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.2'
    testRuntimeOnly 'com.h2database:h2'

    // Java Mail Sender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Image Resize
    implementation 'com.github.downgoon:marvin:1.5.5'
    implementation 'com.github.downgoon:MarvinPlugins:1.5.5'

    // WebClient 외부 API 호출하기
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // json-simple 의존성 추가
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    // elastic search
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    //Spring HATEOAS
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'

    // logback
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

}
// QueryDsl Test Code 실행 시, QClass 생성
sourceSets {
    main.java.srcDirs += 'build/generated/source/apt/main'
}

// Gradle Clean 실행 시, QClass 디렉토리 삭제
clean {
    delete file('src/main/generated')
}

tasks.named('test') {
    useJUnitPlatform()
}